--- a/Gw2Sharp.Tests/Gw2Sharp.Tests.csproj
+++ b/Gw2Sharp.Tests/Gw2Sharp.Tests.csproj
@@ -261,6 +261,9 @@
     <None Remove="TestFiles\Skins\Skins.bulk.json" />
     <None Remove="TestFiles\Skins\Skins.ids.json" />
     <None Remove="TestFiles\Skins\Skins.single.json" />
+    <None Remove="TestFiles\Specializations\Specializations.bulk.json" />
+    <None Remove="TestFiles\Specializations\Specializations.ids.json" />
+    <None Remove="TestFiles\Specializations\Specializations.single.json" />
     <None Remove="TestFiles\TokenInfo\TokenInfo.ApiToken.json" />
     <None Remove="TestFiles\TokenInfo\TokenInfo.SubToken.json" />
     <None Remove="TestFiles\WorldBosses\WorldBosses.bulk.json" />
@@ -517,6 +520,9 @@
     <EmbeddedResource Include="TestFiles\Skins\Skins.bulk.json" />
     <EmbeddedResource Include="TestFiles\Skins\Skins.ids.json" />
     <EmbeddedResource Include="TestFiles\Skins\Skins.single.json" />
+    <EmbeddedResource Include="TestFiles\Specializations\Specializations.bulk.json" />
+    <EmbeddedResource Include="TestFiles\Specializations\Specializations.ids.json" />
+    <EmbeddedResource Include="TestFiles\Specializations\Specializations.single.json" />
     <EmbeddedResource Include="TestFiles\TokenInfo\TokenInfo.ApiToken.json" />
     <EmbeddedResource Include="TestFiles\TokenInfo\TokenInfo.SubToken.json" />
     <EmbeddedResource Include="TestFiles\WorldBosses\WorldBosses.bulk.json" />
