--- a/.editorconfig
+++ b/.editorconfig
@@ -372,6 +372,8 @@ dotnet_diagnostic.s2342.severity=silent
 dotnet_diagnostic.s2743.severity=none
 # S3963: "static" fields should be initialized inline
 dotnet_diagnostic.s3963.severity=none
+# S3925: "ISerializable" should be implemented correctly
+dotnet_diagnostic.s3925.severity=suggestion
 # S3966: Objects should not be disposed more than once
 dotnet_diagnostic.s3966.severity=silent
 # S4136: Method overloads should be grouped together
