--- a/.github/workflows/publish-version.yml
+++ b/.github/workflows/publish-version.yml
@@ -33,8 +33,8 @@ jobs:
     needs: [test]
     steps:
       - uses: actions/checkout@v2
-      - run: |
-          git fetch --prune --unshallow
+        with:
+          fetch-depth: 0
       - name: Install InheritDocTool
         shell: powershell
         run: dotnet tool install --global InheritDocTool
