Add additional R# rules to .editorconfig

--- a/.editorconfig
+++ b/.editorconfig
@@ -72,6 +72,9 @@ resharper_keep_existing_embedded_arrangement=false
 resharper_keep_existing_embedded_block_arrangement=false
 resharper_keep_existing_switch_expression_arrangement=false
 resharper_parentheses_non_obvious_operations=none, multiplicative, additive, arithmetic, shift, relational, equality, bitwise_and, bitwise_exclusive_or, bitwise_inclusive_or, bitwise, null_coalescing, lowest
+resharper_place_accessorholder_attribute_on_same_line=false
+resharper_place_field_attribute_on_same_line=false
+resharper_place_simple_case_statement_on_same_line=false
 resharper_place_simple_embedded_statement_on_same_line=false
 resharper_place_simple_initializer_on_single_line=true
 resharper_wrap_object_and_collection_initializer_style=chop_if_long
