Only run deterministic builds when we version builds
SonarCloud somehow doesn't seem to read coverage results from deterministic builds

--- a/Gw2Sharp/Gw2Sharp.csproj
+++ b/Gw2Sharp/Gw2Sharp.csproj
@@ -47,7 +47,7 @@
     <GenerateAssemblyVersionAttribute>false</GenerateAssemblyVersionAttribute>
   </PropertyGroup>
 
-  <PropertyGroup Condition="'$(CI)'=='true'">
+  <PropertyGroup Condition="'$(VERSIONED_BUILD)'!='' And '$(CI)'=='true'">
     <ContinuousIntegrationBuild>true</ContinuousIntegrationBuild>
     <Deterministic>true</Deterministic>
   </PropertyGroup>
