Add additional R# rules for attributes

--- a/.editorconfig
+++ b/.editorconfig
@@ -68,9 +68,11 @@ resharper_braces_for_using=required_for_multiline
 resharper_braces_for_while=required_for_multiline
 resharper_braces_redundant=true
 resharper_csharp_blank_lines_around_single_line_invocable=1
+resharper_keep_existing_attribute_arrangement=true
 resharper_keep_existing_embedded_arrangement=false
 resharper_keep_existing_embedded_block_arrangement=false
 resharper_keep_existing_switch_expression_arrangement=false
+resharper_max_attribute_length_for_same_line=99999
 resharper_parentheses_non_obvious_operations=none, multiplicative, additive, arithmetic, shift, relational, equality, bitwise_and, bitwise_exclusive_or, bitwise_inclusive_or, bitwise, null_coalescing, lowest
 resharper_place_accessorholder_attribute_on_same_line=false
 resharper_place_field_attribute_on_same_line=false
