--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,25 +43,27 @@ jobs:
       - name: Install InheritDocTool
         shell: powershell
         run: dotnet tool install --global InheritDocTool
-      - name: Patch nightly version
+      # GitVersion action doesn't support /ensureassemblyinfo, see https://github.com/GitTools/actions/issues/220
+      # So we need to create a new file to let GitVersion populate it
+      - name: Create assembly info file for GitVersion
         shell: powershell
         run: |
-          $version = GitVersion /output json /updateassemblyinfo Gw2Sharp/Properties/AssemblyVersionInfo.cs /ensureassemblyinfo
-          Write-Output $version
-          $version = $version | ConvertFrom-Json
-          $nuget = $version.SemVer
-          Write-Output "Assembly version: $($version.AssemblySemVer)"
-          Write-Output "Assembly file version: $($version.AssemblySemFileVer)"
-          Write-Output "Informational version: $($version.InformationalVersion)"
-          Write-Output "NuGet version: $nuget"
-          echo "::set-env name=VERSION::$nuget"
+          New-Item -Path Gw2Sharp/Properties/AssemblyVersionInfo.cs -ItemType File
+      - uses: gittools/actions/gitversion/setup/v0.9.6
+        with:
+          versionSpec: '5.x'
+      - uses: gittools/actions/gitversion/execute@v0.9.6
+        id: gitversion
+        with:
+          updateAssemblyInfo: true
+          updateAssemblyInfoFilename: Gw2Sharp/Properties/AssemblyVersionInfo.cs
       - name: Run dotnet build
-        run: dotnet build -c Release -p:VERSIONED_BUILD=$env:VERSION
+        run: dotnet build -c Release -p:VERSIONED_BUILD=${{ steps.gitversion.outputs.semVer }}
       - name: Run InheritDocTool
         shell: powershell
         run: InheritDoc -o
       - name: Run dotnet pack
-        run: dotnet pack Gw2Sharp -c Release --no-build -p:VERSIONED_BUILD=$env:VERSION
+        run: dotnet pack Gw2Sharp -c Release --no-build -p:VERSIONED_BUILD=${{ steps.gitversion.outputs.semVer }}
       - name: Run dotnet nuget push
         run: |
           dotnet nuget add source https://pkgs.dev.azure.com/Archomeda/Gw2Sharp/_packaging/Nightly/nuget/v3/index.json -n AzureDevOps -u github-actions -p "${{ secrets.DEVOPS_TOKEN }}"
