--- a/.editorconfig
+++ b/.editorconfig
@@ -285,6 +285,8 @@ dotnet_diagnostic.ca1308.severity=none
 dotnet_diagnostic.ca1707.severity=none
 # CA1720: Identifier contains type name
 dotnet_diagnostic.ca1720.severity=none
+# CA1805: Do not initialize unnecessarily
+dotnet_diagnostic.CA1805.severity = silent
 # CA1810: Initialize reference type static fields inline
 dotnet_diagnostic.ca1810.severity=silent
 # CA1826: Do not use Enumerable methods on indexable collections. Instead use the collection directly
@@ -367,6 +369,8 @@ dotnet_diagnostic.cs8655.severity=error
 dotnet_diagnostic.cs8667.severity=error
 # CS8714: The type cannot be used as type parameter in the generic type or method. Nullability of type argument doesn't match 'notnull' constraint.
 dotnet_diagnostic.cs8714.severity=error
+# CS8764: Nullability of return type doesn't match overridden member (possibly because of nullability attributes).
+dotnet_diagnostic.cs8764.severity=error
 # IDE0069: Disposable fields should be disposed
 dotnet_diagnostic.ide0069.severity=warning
 # S1117: Local variables should not shadow class fields
