Add overview, scores and stats subendpoints for v2/wvw/matches

--- a/Gw2Sharp.Tests/Gw2Sharp.Tests.csproj
+++ b/Gw2Sharp.Tests/Gw2Sharp.Tests.csproj
@@ -290,6 +290,15 @@
     <None Remove="TestFiles\Wvw\WvwMatches.bulk.json" />
     <None Remove="TestFiles\Wvw\WvwMatches.ids.json" />
     <None Remove="TestFiles\Wvw\WvwMatches.single.json" />
+    <None Remove="TestFiles\Wvw\WvwMatchesOverview.bulk.json" />
+    <None Remove="TestFiles\Wvw\WvwMatchesOverview.ids.json" />
+    <None Remove="TestFiles\Wvw\WvwMatchesOverview.single.json" />
+    <None Remove="TestFiles\Wvw\WvwMatchesScores.bulk.json" />
+    <None Remove="TestFiles\Wvw\WvwMatchesScores.ids.json" />
+    <None Remove="TestFiles\Wvw\WvwMatchesScores.single.json" />
+    <None Remove="TestFiles\Wvw\WvwMatchesStats.bulk.json" />
+    <None Remove="TestFiles\Wvw\WvwMatchesStats.ids.json" />
+    <None Remove="TestFiles\Wvw\WvwMatchesStats.single.json" />
     <None Remove="TestFiles\Wvw\WvwObjectives.bulk.json" />
     <None Remove="TestFiles\Wvw\WvwObjectives.ids.json" />
     <None Remove="TestFiles\Wvw\WvwObjectives.single.json" />
@@ -579,6 +588,15 @@
     <EmbeddedResource Include="TestFiles\Wvw\WvwMatches.bulk.json" />
     <EmbeddedResource Include="TestFiles\Wvw\WvwMatches.ids.json" />
     <EmbeddedResource Include="TestFiles\Wvw\WvwMatches.single.json" />
+    <EmbeddedResource Include="TestFiles\Wvw\WvwMatchesOverview.bulk.json" />
+    <EmbeddedResource Include="TestFiles\Wvw\WvwMatchesOverview.ids.json" />
+    <EmbeddedResource Include="TestFiles\Wvw\WvwMatchesOverview.single.json" />
+    <EmbeddedResource Include="TestFiles\Wvw\WvwMatchesScores.bulk.json" />
+    <EmbeddedResource Include="TestFiles\Wvw\WvwMatchesScores.ids.json" />
+    <EmbeddedResource Include="TestFiles\Wvw\WvwMatchesScores.single.json" />
+    <EmbeddedResource Include="TestFiles\Wvw\WvwMatchesStats.bulk.json" />
+    <EmbeddedResource Include="TestFiles\Wvw\WvwMatchesStats.ids.json" />
+    <EmbeddedResource Include="TestFiles\Wvw\WvwMatchesStats.single.json" />
     <EmbeddedResource Include="TestFiles\Wvw\WvwObjectives.bulk.json" />
     <EmbeddedResource Include="TestFiles\Wvw\WvwObjectives.ids.json" />
     <EmbeddedResource Include="TestFiles\Wvw\WvwObjectives.single.json" />
