Extract docfx in its own folder

--- a/.github/workflows/update-docs.yml
+++ b/.github/workflows/update-docs.yml
@@ -17,9 +17,11 @@ jobs:
         shell: powershell
         run: |
           Invoke-WebRequest https://github.com/dotnet/docfx/releases/download/v2.58/docfx.zip -OutFile docfx.zip
+          mkdir docfx
+          cd docfx
           7z e docfx.zip
       - name: Generate docs
-        run: ./docfx.exe docs/docfx.json
+        run: docfx/docfx.exe docs/docfx.json
       - name: Upload docs
         uses: actions/upload-artifact@v1
         with:
