Add tags to NuGet package

--- a/Gw2Sharp/Gw2Sharp.csproj
+++ b/Gw2Sharp/Gw2Sharp.csproj
@@ -11,6 +11,7 @@
     <PackageId>Gw2Sharp</PackageId>
     <Authors>Archomeda</Authors>
     <Description>Gw2Sharp is a cross-platform .NET wrapper library for the official Guild Wars 2 API.</Description>
+    <PackageTags>Guild Wars 2;GW2</PackageTags>
     <PackageProjectUrl>https://archomeda.github.io/Gw2Sharp</PackageProjectUrl>
     <RepositoryUrl>https://github.com/Archomeda/Gw2Sharp</RepositoryUrl>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
