--- a/.editorconfig
+++ b/.editorconfig
@@ -104,7 +104,7 @@ dotnet_style_predefined_type_for_locals_parameters_members=true:warning
 dotnet_style_predefined_type_for_member_access=true:warning
 
 # Modifier preferences
-dotnet_style_require_accessibility_modifiers=always:warning
+dotnet_style_require_accessibility_modifiers=for_non_interface_members:warning
 csharp_preferred_modifier_order=public,private,protected,internal,static,extern,new,virtual,abstract,sealed,override,readonly,unsafe,volatile,async:warning
 dotnet_style_readonly_field=true:warning
 
@@ -121,15 +121,18 @@ dotnet_style_explicit_tuple_names=true:suggestion
 dotnet_style_prefer_inferred_tuple_names=true:warning
 dotnet_style_prefer_inferred_anonymous_type_member_names=true:suggestion
 dotnet_style_prefer_auto_properties=true:warning
-dotnet_style_prefer_is_null_check_over_reference_equality_method=true:warning
 dotnet_style_prefer_conditional_expression_over_assignment=true:suggestion
 dotnet_style_prefer_conditional_expression_over_return=true:suggestion
+dotnet_style_prefer_compound_assignment=true:warning
+dotnet_style_prefer_simplified_interpolation=true:warning
+dotnet_style_prefer_simplified_boolean_expressions=true:warning
 
 # Null-checking preferences
 dotnet_style_coalesce_expression=true:warning
 dotnet_style_null_propagation=true:warning
+dotnet_style_prefer_is_null_check_over_reference_equality_method=true:warning
 
-# Implicit and explicit types
+# 'var' preferences
 csharp_style_var_for_built_in_types=false:warning
 csharp_style_var_when_type_is_apparent=true:warning
 csharp_style_var_elsewhere=true:warning
@@ -145,21 +148,32 @@ csharp_style_expression_bodied_accessors=when_on_single_line:suggestion
 # Pattern matching
 csharp_style_pattern_matching_over_is_with_cast_check=true:warning
 csharp_style_pattern_matching_over_as_with_null_check=true:warning
-
-# Inlined variable declarations
-csharp_style_inlined_variable_declaration=true:warning
+csharp_style_prefer_switch_expression=true:suggestion
+csharp_style_prefer_pattern_matching=true:suggestion
+csharp_style_prefer_not_pattern=true:warning
 
 # Expression-level preferences
+csharp_style_inlined_variable_declaration=true:warning
 csharp_prefer_simple_default_expression=true:warning
-csharp_style_deconstructed_variable_declaration=true:warning
 csharp_style_pattern_local_over_anonymous_function=true:warning
+csharp_style_deconstructed_variable_declaration=true:warning
+csharp_style_prefer_index_operator=true:suggestion
+csharp_style_prefer_range_operator=true:suggestion
+csharp_style_implicit_object_creation_when_type_is_apparent=true:suggestion
 
 # "Null" checking preferences
 csharp_style_throw_expression=true:warning
 csharp_style_conditional_delegate_call=true:warning
 
 # Code block preferences
-csharp_prefer_braces=false:suggestion
+csharp_prefer_braces=when_multiline:suggestion
+csharp_prefer_simple_using_statement=true:suggestion
+
+# 'using' directive preferences
+csharp_using_directive_placement=outside_namespace:suggestion
+
+# Modifier preferences
+csharp_prefer_static_local_function=true:suggestion
 
 # Organize usings
 dotnet_sort_system_directives_first=true
@@ -175,23 +189,36 @@ csharp_new_line_before_members_in_anonymous_types=true
 csharp_new_line_between_query_expression_clauses=true
 
 # Indentation options
-csharp_indent_braces=false
 csharp_indent_case_contents=true
 csharp_indent_switch_labels=true
 csharp_indent_labels=no_change
+csharp_indent_block_contents=true
+csharp_indent_braces=false
+csharp_indent_case_contents_when_block=false
 
 # Spacing options
 csharp_space_after_cast=false
 csharp_space_after_keywords_in_control_flow_statements=true
-csharp_space_between_method_declaration_parameter_list_parentheses=false
-csharp_space_between_method_call_parameter_list_parentheses=false
 csharp_space_between_parentheses=false
 csharp_space_before_colon_in_inheritance_clause=true
 csharp_space_after_colon_in_inheritance_clause=true
 csharp_space_around_binary_operators=before_and_after
+csharp_space_between_method_declaration_parameter_list_parentheses=false
 csharp_space_between_method_declaration_empty_parameter_list_parentheses=false
-csharp_space_between_method_call_name_and_opening_parenthesis=false
+csharp_space_between_method_declaration_name_and_open_parenthesis=false
+csharp_space_between_method_call_parameter_list_parentheses=false
 csharp_space_between_method_call_empty_parameter_list_parentheses=false
+csharp_space_between_method_call_name_and_opening_parenthesis=false
+csharp_space_after_comma=true
+csharp_space_before_comma=false
+csharp_space_after_dot=false
+csharp_space_before_dot=false
+csharp_space_after_semicolon_in_for_statement=true
+csharp_space_before_semicolon_in_for_statement=false
+csharp_space_around_declaration_statements=false
+csharp_space_before_open_square_brackets=false
+csharp_space_between_empty_square_brackets=false
+csharp_space_between_square_brackets=false
 
 # Wrapping options
 csharp_preserve_single_line_statements=false
