--- a/.github/workflows/update-docs.yml
+++ b/.github/workflows/update-docs.yml
@@ -32,6 +32,7 @@ jobs:
     name: Push
     runs-on: ubuntu-latest
     needs: [build]
+    concurrency: docs-push
     steps:
       - uses: actions/checkout@v2
         with:
