--- a/.github/workflows/command-test.yml
+++ b/.github/workflows/command-test.yml
@@ -29,9 +29,9 @@ jobs:
           - ubuntu-latest
           - windows-latest
         dotnet:
+          - net6.0
           - net5.0
           - netcoreapp3.1
-          - netcoreapp2.1
           - net461
         exclude:
           - os: ubuntu-latest
