--- a/.github/workflows/publish-version.yml
+++ b/.github/workflows/publish-version.yml
@@ -16,8 +16,9 @@ jobs:
           - ubuntu-latest
           - windows-latest
         dotnet:
+          - net6.0
+          - net5.0
           - netcoreapp3.1
-          - netcoreapp2.1
           - net461
         exclude:
           - os: ubuntu-latest
