--- a/.github/workflows/publish-version.yml
+++ b/.github/workflows/publish-version.yml
@@ -14,7 +14,7 @@ jobs:
       matrix:
         os:
           - ubuntu-latest
-          - windows-latest
+          - windows-2022
         dotnet:
           - net6.0
           - net5.0
@@ -30,7 +30,7 @@ jobs:
 
   release:
     name: Release
-    runs-on: windows-latest
+    runs-on: windows-2022
     needs: [test]
     steps:
       - uses: actions/checkout@v2
