--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   sonarcloud:
     name: Analysis
-    runs-on: windows-latest
+    runs-on: windows-2022
     if: github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name == 'Archomeda/Gw2Sharp'
     steps:
       - uses: actions/checkout@v2
