--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,11 +21,24 @@ jobs:
           - windows-2022
         dotnet:
           - net6.0
+          - net5.0
+          - netcoreapp3.1
           - net461
+        include:
+          - dotnet: net6.0
+            dotnet_version: 6.0.x
+          - dotnet: net5.0
+            dotnet_version: 5.0.x
+          - dotnet: netcoreapp3.1
+            dotnet_version: 3.1.x
         exclude:
           - os: ubuntu-latest
             dotnet: net461
     steps:
       - uses: actions/checkout@v3
+      - uses: actions/setup-dotnet@v3
+        if: matrix.dotnet_version != ''
+        with:
+          dotnet-version: ${{ matrix.dotnet_version }}
       - name: Run dotnet test
         run: dotnet test -c Release -f ${{ matrix.dotnet }}
