--- a/.github/workflows/publish-version.yml
+++ b/.github/workflows/publish-version.yml
@@ -17,7 +17,16 @@ jobs:
           - windows-2022
         dotnet:
           - net6.0
+          - net5.0
+          - netcoreapp3.1
           - net461
+        include:
+          - dotnet: net6.0
+            dotnet_version: 6.0.x
+          - dotnet: net5.0
+            dotnet_version: 5.0.x
+          - dotnet: netcoreapp3.1
+            dotnet_version: 3.1.x
         exclude:
           - os: ubuntu-latest
             dotnet: net461
@@ -32,6 +41,10 @@ jobs:
     needs: [test]
     steps:
       - uses: actions/checkout@v3
+      - uses: actions/setup-dotnet@v3
+        if: matrix.dotnet_version != ''
+        with:
+          dotnet-version: ${{ matrix.dotnet_version }}
       - name: Generate version
         id: version
         shell: powershell
