--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: CI
+name: Test
 
 on:
   push:
@@ -8,6 +8,7 @@ on:
       - v*.*.*
   pull_request:
     types: [opened, reopened, synchronize]
+  workflow_call:
 
 jobs:
   test:
