--- a/.github/workflows/publish-version.yml
+++ b/.github/workflows/publish-version.yml
@@ -18,7 +18,7 @@ jobs:
       - uses: actions/setup-dotnet@v3
         if: matrix.dotnet_version != ''
         with:
-          dotnet-version: ${{ matrix.dotnet_version }}
+          dotnet-version: 6.0.x
       - name: Generate version
         id: version
         shell: pwsh
