--- a/.github/workflows/publish-version.yml
+++ b/.github/workflows/publish-version.yml
@@ -17,7 +17,10 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-dotnet@v3
         with:
-          dotnet-version: 6.0.x
+          dotnet-version: |
+            3.1.x
+            5.0.x
+            6.0.x
       - name: Generate version
         id: version
         shell: pwsh
